# llm-mail-description

./: .env.example  .gitignore  README.md  Taskfile.yaml  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
.claude/: settings.local.json
config/: app.yaml  schema.yaml
config/prompts/: analyze.jinja
docker/api/: Dockerfile
docker/model-init/: Dockerfile
docs/: api.md  architecture.md  configuration.md  deployment.md  development.md  quantization.md
scripts/: download_model.py  upload_model.py
src/: __init__.py  __main__.py
src/api/: __init__.py  app.py  dependencies.py  exceptions.py
src/api/routes/: __init__.py  analyze.py  health.py
src/batch/: __init__.py  processor.py  protocol.py
src/config/: __init__.py  settings.py
src/inference/: __init__.py  prompt.py  protocol.py  triton.py  truncation.py
src/logging/: __init__.py  setup.py
src/schema/: __init__.py  loader.py
tests/: __init__.py  conftest.py
tests/e2e/: test_analyze_endpoint.py
tests/unit/: test_batch_processor.py  test_prompt.py  test_schema_loader.py
